@@ -1,6 +1,6 @@
 This package includes compilers and tools for the C programming language:
 
-c89, cc, gcc - C compilers
+c89, c99, cc, gcc - C compilers
 flex, lex - lexical analyzer generator
 lint - C program validator
 rpcgen - RPC stub generator
